--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,3 @@
-<!-- index.html -->
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -13,14 +11,15 @@
 
 <body>
     <section class="game">
+
         <!--Title -->
         <div class="title">Rock Paper Scissor</div>
         <div class="enterMoves">Please Enter Number of Moves and Click Enter</div>
         <br>
         <input class="remainingMoves" type="text" />
-
         <br>
-        <!--Display Score of player and computer -->
+
+        <!--Display Score Of Player And Computer -->
         <div class="score">
             <div class="playerScore">
                 <h2 class="opponent">Player</h2>
@@ -30,28 +29,28 @@
             <div class="computerScore">
                 <h2 class="opponent">Computer</h2>
                 <p class="c-count count">0</p>
-
             </div>
         </div>
 
         <div class="move" style="display:none;">Choose Your Move</div>
 
-        <!--Number of moves left before game ends -->
+        <!--Number Of Moves Left Before Game Ends -->
         <div style="display:none" class="movesleft"></div>
 
-        <!--Options available to player to play game -->
+        <!--Options Available To Player To Play Game -->
         <div class="options" style="display:none;">
             <button class="rock">Rock</button>
             <button class="paper">Paper</button>
             <button class="scissor">Scissors</button>
         </div>
 
-        <!--Final result of game -->
+        <!--Computer Selection -->
         <div class="selection"></div>
 
+        <!--Final Result Of Game -->
         <div class="result"></div>
 
-        <!--Reload the game -->
+        <!--Reload The Game -->
         <button class="reload"></button>
 
     </section>
