--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
 
         <!--Title -->
         <div class="title">Rock Paper Scissor</div>
-        <div class="enterMoves">Please Enter Number of Moves and Click Enter</div>
+        <div class="enterMoves">Please Mention Number of Moves and Click Enter</div>
         <br>
         <input class="remainingMoves" type="text" />
         <br>
